kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-chat-api-service
spec:
  selector:
    app: just-chat-api
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
