kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-chat-ui-service
spec:
  selector:
    app: just-chat-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
